--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">USTH Weather</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ha_noi">Hà Nội</string>
+    <string name="ha_giang">Hà Giang</string>
+    <string name="hung_yen">Hưng Yên</string>
+    <string name="hai_phong">Hải Phòng</string>
+    <string name="yen_bai">Yên Bái</string>
+    <string name="lao_cai">Lào Cai</string>
+    <string name="lang_son">Lạng Sơn</string>
 </resources>
